HOT-FIX : Article page align items to left bar about

--- a/src/app/community/components/article/pages/article-page/article-page.component.scss
+++ b/src/app/community/components/article/pages/article-page/article-page.component.scss
@@ -29,7 +29,6 @@
 		margin-top: 1rem;
 		display: flex;
 		flex-direction: column;
-		align-items: center;
 
 		li {
 			display: flex;
